// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Select Basic 1`] = `
Array [
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label downshift-0-toggle-button"
    className="psds-select__button psds-theme--dark"
    id="downshift-0-toggle-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="psds-select__button-inner"
    >
      <span
        className="psds-select__selected psds-select__placeholder psds-theme--dark"
      >
        Select item
      </span>
      <div
        className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
    </div>
  </button>,
  <div
    aria-live="polite"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="psds-select__menu-wrapper"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      <div
        aria-labelledby="downshift-0-label"
        className="psds-menu psds-menu--origin-top-left psds-select__menu"
        id="downshift-0-menu"
        onBlur={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        role="listbox"
        tabIndex={-1}
      >
        <div
          aria-selected="false"
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            id="downshift-0-item-0"
            onMouseMove={[Function]}
            role="option"
          >
            <div
              className="psds-menu__option-inner"
            >
              Can view
              <div
                className="psds-menu__item-icon-filler"
                style={
                  Object {
                    "marginLeft": "auto",
                  }
                }
              />
            </div>
          </button>
        </div>
        <div
          aria-selected="false"
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            id="downshift-0-item-1"
            onMouseMove={[Function]}
            role="option"
          >
            <div
              className="psds-menu__option-inner"
            >
              Can edit
              <div
                className="psds-menu__item-icon-filler"
                style={
                  Object {
                    "marginLeft": "auto",
                  }
                }
              />
            </div>
          </button>
        </div>
        <div
          aria-selected="false"
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            id="downshift-0-item-2"
            onMouseMove={[Function]}
            role="option"
          >
            <div
              className="psds-menu__option-inner"
            >
              Make Owner
              <div
                className="psds-menu__item-icon-filler"
                style={
                  Object {
                    "marginLeft": "auto",
                  }
                }
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Select Button Basic 1`] = `
<button
  className="psds-select__button psds-theme--dark"
>
  <div
    className="psds-select__button-inner"
  >
    Hello
    <div
      className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Components/Select Button Disabled 1`] = `
<button
  className="psds-select__button psds-theme--dark"
  disabled={true}
>
  <div
    className="psds-select__button-inner"
  >
    Hello
    <div
      className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Components/Select Button Error 1`] = `
<button
  className="psds-select__button psds-select__button--error psds-theme--dark"
>
  <div
    className="psds-select__button-inner"
  >
    Hello
    <div
      className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
        />
      </svg>
    </div>
  </div>
  <div
    className="psds-icon psds-icon--size-medium psds-select__error"
  >
    <svg
      aria-label="warning icon"
      role="img"
      viewBox="0 0 24 24"
    >
      <path
        clipRule="evenodd"
        d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 2c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8zm.5 14h-1a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5zm0-4h-1a.5.5 0 0 1-.5-.5V7a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6.5a.5.5 0 0 1-.5.5z"
        fillRule="evenodd"
      />
    </svg>
  </div>
</button>
`;

exports[`Storyshots Components/Select Button Focused 1`] = `
<button
  className="psds-select__button psds-theme--dark"
>
  <div
    className="psds-select__button-inner"
  >
    Hello
    <div
      className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Components/Select Button Is Open 1`] = `
<button
  className="psds-select__button psds-theme--dark psds-select__button--is-open"
>
  <div
    className="psds-select__button-inner"
  >
    Hello
    <div
      className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Components/Select Button Small 1`] = `
<button
  className="psds-select__button psds-select__button--small psds-theme--dark"
>
  <div
    className="psds-select__button-inner"
  >
    Hello
    <div
      className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
    >
      <svg
        aria-label="caret down icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Components/Select Custom Menu Item 1`] = `
Array [
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label downshift-1-toggle-button"
    className="psds-select__button psds-theme--dark"
    id="downshift-1-toggle-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="psds-select__button-inner"
    >
      <span
        className="psds-select__selected psds-select__placeholder psds-theme--dark"
      >
        Select item
      </span>
      <div
        className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
    </div>
  </button>,
  <div
    aria-live="polite"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="psds-select__menu-wrapper"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      <div
        aria-labelledby="downshift-1-label"
        className="psds-menu psds-menu--origin-top-left psds-select__menu"
        id="downshift-1-menu"
        onBlur={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        role="listbox"
        tabIndex={-1}
      >
        <div
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            role="menuitem"
          >
            <div
              className="psds-menu__option-inner"
            >
              <div
                className="psds-menu__item-description-wrapper"
              >
                <span>
                  Can view
                </span>
                <span
                  className="psds-menu__item-description"
                >
                  View details, content and other members in the channel.
                </span>
              </div>
              <div
                className="psds-menu__item-icon-filler"
                style={
                  Object {
                    "marginLeft": "auto",
                  }
                }
              />
            </div>
          </button>
        </div>
        <div
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            role="menuitem"
          >
            <div
              className="psds-menu__option-inner"
            >
              <div
                className="psds-menu__item-description-wrapper"
              >
                <span>
                  Can edit
                </span>
                <span
                  className="psds-menu__item-description"
                >
                  Edit details, add or remove content and invite or remove members
                </span>
              </div>
              <div
                className="psds-menu__item-icon-filler"
                style={
                  Object {
                    "marginLeft": "auto",
                  }
                }
              />
            </div>
          </button>
        </div>
        <div
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            role="menuitem"
          >
            <div
              className="psds-menu__option-inner"
            >
              <div
                className="psds-menu__item-description-wrapper"
              >
                <span>
                  Make Owner
                </span>
                <span
                  className="psds-menu__item-description"
                >
                  Edit details, add or remove content, invite or remove members
                </span>
              </div>
              <div
                className="psds-menu__item-icon-filler"
                style={
                  Object {
                    "marginLeft": "auto",
                  }
                }
              />
            </div>
          </button>
        </div>
        <div
          className="psds-menu__divider"
        />
        <div
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            role="menuitem"
            style={
              Object {
                "color": "#D21C09",
              }
            }
          >
            <div
              className="psds-menu__option-inner"
            >
              Remove Member
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Select Custom Render Option 1`] = `
Array [
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label downshift-3-toggle-button"
    className="psds-select__button psds-theme--dark"
    id="downshift-3-toggle-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="psds-select__button-inner"
    >
      <span
        className="psds-select__selected psds-select__placeholder psds-theme--dark"
      >
        Select item
      </span>
      <div
        className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
    </div>
  </button>,
  <div
    aria-live="polite"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="psds-select__menu-wrapper"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      <div
        aria-labelledby="downshift-3-label"
        className="psds-menu psds-menu--origin-top-left psds-select__menu"
        id="downshift-3-menu"
        onBlur={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        role="listbox"
        tabIndex={-1}
      >
        <div
          aria-selected="false"
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            id="downshift-3-item-0"
            onMouseMove={[Function]}
            role="option"
          >
            <div
              className="psds-menu__option-inner"
            >
              <div
                className="psds-menu__item-description-wrapper"
              >
                <span>
                  Can view
                </span>
                <span
                  className="psds-menu__item-description"
                >
                  View details, content and other members in the channel.
                </span>
              </div>
              <div
                className="psds-menu__item-icon-filler"
                style={
                  Object {
                    "marginLeft": "auto",
                  }
                }
              />
            </div>
          </button>
        </div>
        <div
          aria-selected="false"
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            id="downshift-3-item-1"
            onMouseMove={[Function]}
            role="option"
          >
            <div
              className="psds-menu__option-inner"
            >
              <div
                className="psds-menu__item-description-wrapper"
              >
                <span>
                  Can edit
                </span>
                <span
                  className="psds-menu__item-description"
                >
                  Edit details, add or remove content and invite or remove members
                </span>
              </div>
              <div
                className="psds-menu__item-icon-filler"
                style={
                  Object {
                    "marginLeft": "auto",
                  }
                }
              />
            </div>
          </button>
        </div>
        <div
          aria-selected="false"
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            id="downshift-3-item-2"
            onMouseMove={[Function]}
            role="option"
          >
            <div
              className="psds-menu__option-inner"
            >
              <div
                className="psds-menu__item-description-wrapper"
              >
                <span>
                  Make Owner
                </span>
                <span
                  className="psds-menu__item-description"
                >
                  Edit details, add or remove content, invite or remove members
                </span>
              </div>
              <div
                className="psds-menu__item-icon-filler"
                style={
                  Object {
                    "marginLeft": "auto",
                  }
                }
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Select Position Below Left 1`] = `
Array [
  <button
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label downshift-2-toggle-button"
    className="psds-select__button psds-theme--dark"
    id="downshift-2-toggle-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="psds-select__button-inner"
    >
      <span
        className="psds-select__selected psds-select__placeholder psds-theme--dark"
      >
        Select item
      </span>
      <div
        className="psds-icon psds-icon--size-medium psds-select__icon psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </div>
    </div>
  </button>,
  <div
    aria-live="polite"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="psds-select__menu-wrapper"
      style={
        Object {
          "position": "absolute",
        }
      }
    >
      <div
        aria-labelledby="downshift-2-label"
        className="psds-menu psds-menu--origin-top-left psds-select__menu"
        id="downshift-2-menu"
        onBlur={[Function]}
        onKeyDown={[Function]}
        onMouseLeave={[Function]}
        role="listbox"
        tabIndex={-1}
      >
        <div
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            role="menuitem"
          >
            <div
              className="psds-menu__option-inner"
            >
              <div
                className="psds-menu__item-description-wrapper"
              >
                <span>
                  Can view
                </span>
                <span
                  className="psds-menu__item-description"
                >
                  View details, content and other members in the channel.
                </span>
              </div>
              <div
                className="psds-menu__item-icon-filler"
                style={
                  Object {
                    "marginLeft": "auto",
                  }
                }
              />
            </div>
          </button>
        </div>
        <div
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            role="menuitem"
          >
            <div
              className="psds-menu__option-inner"
            >
              <div
                className="psds-menu__item-description-wrapper"
              >
                <span>
                  Can edit
                </span>
                <span
                  className="psds-menu__item-description"
                >
                  Edit details, add or remove content and invite or remove members
                </span>
              </div>
              <div
                className="psds-menu__item-icon-filler"
                style={
                  Object {
                    "marginLeft": "auto",
                  }
                }
              />
            </div>
          </button>
        </div>
        <div
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            role="menuitem"
          >
            <div
              className="psds-menu__option-inner"
            >
              <div
                className="psds-menu__item-description-wrapper"
              >
                <span>
                  Make Owner
                </span>
                <span
                  className="psds-menu__item-description"
                >
                  Edit details, add or remove content, invite or remove members
                </span>
              </div>
              <div
                className="psds-menu__item-icon-filler"
                style={
                  Object {
                    "marginLeft": "auto",
                  }
                }
              />
            </div>
          </button>
        </div>
        <div
          className="psds-menu__divider"
        />
        <div
          className="psds-menu__item"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <button
            className="psds-menu__option"
            role="menuitem"
            style={
              Object {
                "color": "#D21C09",
              }
            }
          >
            <div
              className="psds-menu__option-inner"
            >
              Remove Member
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Select Selected Placeholder 1`] = `
<span
  className="psds-select__selected psds-select__placeholder psds-theme--dark"
>
  placeholder
</span>
`;

exports[`Storyshots Components/Select Selected Selected 1`] = `
<span
  className="psds-select__selected psds-select__placeholder psds-theme--dark"
>
  selected
</span>
`;
